--- a/verification-time.html
+++ b/verification-time.html
@@ -238,98 +238,7 @@
     </div>
 
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const data = [
-                { name: 'More than 10 Minutes', value: 1.5 },
-                { name: 'Between 7 And 10 Minutes', value: 3.55 },
-                { name: 'Between 6 And 7 Minutes', value: 3.25 },
-                { name: 'Between 5 And 6 Minutes', value: 7.23 },
-                { name: 'Between 0 And 5 Minutes', value: 84.47 }
-            ];
-
-            Highcharts.chart('verification-chart', {
-                chart: {
-                    type: 'bar',
-                    options3d: {
-                        enabled: true,
-                        alpha: 15,
-                        beta: 15,
-                        depth: 50,
-                        viewDistance: 25
-                    },
-                    backgroundColor: 'transparent',
-                    height: 400,
-                    style: {
-                        fontFamily: 'Inter, sans-serif'
-                    }
-                },
-                title: { text: '' },
-                xAxis: {
-                    categories: data.map(d => d.name),
-                    labels: {
-                        style: {
-                            fontSize: '15px',
-                            color: '#64748b'
-                        }
-                    },
-                    gridLineWidth: 1,
-                    gridLineColor: '#e5e7eb'
-                },
-                yAxis: {
-                    min: 0,
-                    max: 100,
-                    title: null,
-                    labels: {
-                        style: {
-                            fontSize: '14px',
-                            color: '#64748b'
-                        }
-                    },
-                    gridLineWidth: 1,
-                    gridLineColor: '#e5e7eb'
-                },
-                legend: {
-                    enabled: true,
-                    align: 'center',
-                    verticalAlign: 'bottom'
-                },
-                plotOptions: {
-                    bar: {
-                        depth: 40,
-                        groupZPadding: 10,
-                        grouping: false,
-                        edgeColor: '#60A5FA',
-                        edgeWidth: 2,
-                        color: '#ffffff',
-                        borderColor: '#60A5FA',
-                        borderWidth: 2,
-                        dataLabels: {
-                            enabled: true,
-                            format: '{point.y:.2f}',
-                            style: {
-                                color: '#222',
-                                fontWeight: 'bold',
-                                fontSize: '15px'
-                            },
-                            align: 'right',
-                            inside: false
-                        }
-                    }
-                },
-                tooltip: {
-                    pointFormat: '<b>{point.y:.2f}%</b>'
-                },
-                series: [{
-                    name: '% Rate',
-                    data: data.map(d => d.value),
-                    color: '#ffffff',
-                    borderColor: '#60A5FA',
-                    borderWidth: 2
-                }]
-            });
-        });
-    </script>
+    <script src="/assets/js/verification-time.js"></script>
     <script src="https://kit.fontawesome.com/ce278ed6db.js" crossorigin="anonymous"></script>
     <script src="/assets/js/main.js"></script>
 </body>
