--- a/logout.html
+++ b/logout.html
@@ -17,19 +17,7 @@
     <p class="text-gray-500">Please wait while we log you out.</p>
   </div>
 
-  <script>
-    // Wait for DOM
-    document.addEventListener("DOMContentLoaded", () => {
-      setTimeout(() => {
-        window.sonner?.toast?.success("You have been successfully logged out") ||
-          console.log("You have been successfully logged out");
-
-        setTimeout(() => {
-          window.location.href = "/";
-        }, 1000); // Extra 1s after toast
-      }, 1000); // Simulate logout delay
-    });
-  </script>
+  <script src="/assets/js/logout.js"></script>
 
 </body>
 
