--- a/video-call-waiting.html
+++ b/video-call-waiting.html
@@ -81,7 +81,7 @@
                         <a href="/document-breakdown.html"
                             class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100">
                             <i class="fa-regular fa-file "></i>
-                            <span > Document Breakdown </span>
+                            <span> Document Breakdown </span>
                         </a>
                         <a href="/video-call-waiting.html"
                             class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded sidebar-item active hover:bg-gray-100">
@@ -135,8 +135,6 @@
                 </a>
             </nav>
         </div>
-
-
         <!-- Main content -->
         <div class="flex flex-col flex-1 h-full overflow-hidden">
             <!-- Mobile Header -->
@@ -238,89 +236,8 @@
         </div>
     </div>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            Highcharts.chart('video-waiting-chart', {
-                chart: {
-                    type: 'bar',
-                    options3d: {
-                        enabled: true,
-                        alpha: 15,
-                        beta: 15,
-                        depth: 50,
-                        viewDistance: 25
-                    },
-                    backgroundColor: 'transparent',
-                    height: 350,
-                    style: { fontFamily: 'Inter, sans-serif' }
-                },
-                title: { text: '' },
-                xAxis: {
-                    categories: ['More than 5 Minutes', 'Between 0 And 5 Minutes'],
-                    labels: {
-                        style: {
-                            fontSize: '16px',
-                            color: '#64748b'
-                        }
-                    },
-                    gridLineWidth: 1,
-                    gridLineColor: '#e5e7eb'
-                },
-                yAxis: {
-                    min: 0,
-                    max: 100,
-                    title: null,
-                    labels: {
-                        style: {
-                            fontSize: '14px',
-                            color: '#64748b'
-                        }
-                    },
-                    gridLineWidth: 1,
-                    gridLineColor: '#e5e7eb'
-                },
-                legend: {
-                    enabled: true,
-                    align: 'center',
-                    verticalAlign: 'bottom'
-                },
-                plotOptions: {
-                    bar: {
-                        depth: 40,
-                        groupZPadding: 10,
-                        grouping: false,
-                        edgeColor: '#60A5FA',
-                        edgeWidth: 2,
-                        color: '#ffffff',
-                        borderColor: '#60A5FA',
-                        borderWidth: 2,
-                        dataLabels: {
-                            enabled: true,
-                            format: '{point.y:.2f}',
-                            style: {
-                                color: '#222',
-                                fontWeight: 'bold',
-                                fontSize: '16px'
-                            },
-                            align: 'right',
-                            inside: false
-                        }
-                    }
-                },
-                tooltip: {
-                    pointFormat: '<b>{point.y:.2f}%</b>'
-                },
-                series: [{
-                    name: '% Rate',
-                    data: [5.03, 94.97],
-                    color: '#ffffff',
-                    borderColor: '#60A5FA',
-                    borderWidth: 2
-                }]
-            });
-        });
-    </script>
 
+    <script src="/assets/js/video-call.js"></script>
     <script src="https://kit.fontawesome.com/ce278ed6db.js" crossorigin="anonymous"></script>
     <script src="/assets/js/main.js"></script>
 </body>
