fix the width issue in the code

--- a/overall-success.html
+++ b/overall-success.html
@@ -153,7 +153,7 @@
             </header>
 
             <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
-                <div class="max-w-screen-xl mx-auto">
+                <div>
                     <div class="flex items-center justify-between mb-6">
                         <div>
                             <h1 class="text-2xl font-bold text-gray-900">Overall Success</h1>
