--- a/average-response-time.html
+++ b/average-response-time.html
@@ -22,7 +22,6 @@
     <div class="flex h-screen overflow-hidden">
         <!-- Overlay for Mobile -->
         <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
-
         <div id="sidebar"
             class="bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col">
             <div class="flex items-center justify-between p-4 border-b border-gray-200 sidebar-top">
@@ -156,7 +155,7 @@
 
             <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
 
-                <div class="mx-auto max-w-7xl ">
+                <div>
                     <div class="flex flex-col items-start justify-between gap-4 mb-6 md:flex-row md:items-center">
                         <div>
                             <h1 class="text-2xl font-bold text-gray-800">Verification Time (SLA)</h1>
