--- a/mobile-devices.html
+++ b/mobile-devices.html
@@ -101,7 +101,7 @@
                         <a href="/country-distribution.html"
                             class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100">
                             <i class="fa-solid fa-globe "></i>
-                            <span > Country Distribution </span></a>
+                            <span> Country Distribution </span></a>
                         <a href="/mobile-devices.html"
                             class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100">
                             <i class="fa-solid fa-mobile-screen "></i>
@@ -155,8 +155,7 @@
             </header>
 
             <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
-
-                <div class="mx-auto max-w-7xl ">
+                <div>
                     <div class="flex flex-col items-start justify-between gap-4 mb-6 md:flex-row md:items-center">
                         <div>
                             <h1 class="text-2xl font-bold text-gray-800">Mobile Devices Distribution</h1>
@@ -327,7 +326,6 @@
                         </div>
                     </div>
                 </div>
-
             </main>
 
             <!-- Footer -->
