--- a/transactions.html
+++ b/transactions.html
@@ -153,8 +153,7 @@
       </header>
 
       <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
-
-        <div class="">
+        <div>
           <div class="flex flex-col items-start justify-between gap-4 mb-6 md:flex-row md:items-center">
             <div>
               <h1 class="text-2xl font-bold text-gray-800">Transactions</h1>
