--- a/verification-failure.html
+++ b/verification-failure.html
@@ -21,7 +21,6 @@
     <div class="flex h-screen overflow-hidden">
         <!-- Overlay for Mobile -->
         <div id="overlay" class="fixed inset-0 z-20 hidden bg-black bg-opacity-50" onclick="closeMobileMenu()"></div>
-
         <div id="sidebar"
             class="bg-white border-r border-gray-200 shadow-sm w-[250px] transition-all duration-300 flex flex-col">
             <div class="flex items-center justify-between p-4 border-b border-gray-200 sidebar-top">
@@ -152,8 +151,7 @@
             </header>
 
             <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
-
-                <div class="max-w-screen-xl mx-auto">
+                <div>
                     <div class="flex items-center justify-between mb-6">
                         <div>
                             <h1 class="text-2xl font-bold text-gray-900">Verification Failure</h1>
@@ -220,7 +218,6 @@
 
                 </div>
             </main>
-
             <!-- Footer -->
             <footer class="bg-white border-t border-gray-200 footer">
                 <div class="flex items-center justify-between">
