--- a/video-call-waiting.html
+++ b/video-call-waiting.html
@@ -154,8 +154,7 @@
             </header>
 
             <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
-
-                <div class="mx-auto max-w-7xl ">
+                <div>
                     <div class="flex flex-col items-start justify-between gap-4 mb-6 md:flex-row md:items-center">
                         <div>
                             <h1 class="text-2xl font-bold text-gray-800">Document Breakdown</h1>
@@ -217,9 +216,7 @@
 
                     </div>
                 </div>
-
             </main>
-
             <!-- Footer -->
             <footer class="bg-white border-t border-gray-200 footer">
                 <div class="flex items-center justify-between">
