--- a/mobile-devices.html
+++ b/mobile-devices.html
@@ -161,11 +161,22 @@
                             <h1 class="text-2xl font-bold text-gray-800">Mobile Devices Distribution</h1>
                             <p class="text-gray-500">Analysis of mobile devices used in verification process</p>
                         </div>
-                        <div class="flex items-center gap-2">
-                            <span class="text-sm font-medium text-gray-700">Define Time Period:</span>
-                            <input type="date" class="px-3 py-1 text-sm border rounded" />
-                            <span class="text-gray-500">To</span>
-                            <input type="date" class="px-3 py-1 text-sm border rounded" />
+                        <div class="time-period-container">
+                            <label>Define Time Period:</label>
+                            <div class="date-inputs">
+                                <div class="date-wrapper">
+                                    <input type="date" id="from-date" />
+                                    <label for="from-date" class="placeholder-text">From</label>
+                                    <span class="calendar-icon"></span>
+                                </div>
+                                <div class="date-wrapper">
+                                    <input type="date" id="to-date" />
+                                    <label for="to-date" class="placeholder-text">To</label>
+                                    <span class="calendar-icon"></span>
+                                </div>
+                            </div>
+                            <!-- Search Button -->
+                            <button id="search-btn" class="search-button">Search</button>
                         </div>
                     </div>
 
