--- a/settings.html
+++ b/settings.html
@@ -37,7 +37,18 @@
             <nav class="flex-1 px-3 py-4 overflow-y-auto">
                 <a href="/index.html" title="Dashboard"
                     class="flex items-center gap-2 px-3 py-2 text-gray-700 transition rounded sidebar-item hover:bg-gray-100">
-                    <i class="fa-solid fa-chart-column"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="w-5 h-5 lucide lucide-chart-column"
+                        data-lov-id="src\components\Sidebar\Sidebar.tsx:40:12" data-lov-name="BarChart3"
+                        data-component-path="src\components\Sidebar\Sidebar.tsx" data-component-line="40"
+                        data-component-file="Sidebar.tsx" data-component-name="BarChart3"
+                        data-component-content="%7B%22className%22%3A%22h-5%20w-5%22%7D">
+                        <path d="M3 3v16a2 2 0 0 0 2 2h16"></path>
+                        <path d="M18 17V9"></path>
+                        <path d="M13 17V5"></path>
+                        <path d="M8 17v-3"></path>
+                    </svg>
                     <span class="sidebar-label">Dashboard</span>
                 </a>
                 <div class="relative">
